--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
         <meta name="theme-color" content="#ffffff">
         <link rel="shortcut icon" href="img/favicon.ico">
         <link rel="stylesheet" href="css/index.css">
-        <title>Ridibooks Android APK</title>
+        <title>RIDI Android APK</title>
     </head>
     <body>
         <header class="header">
             <a href="https://ridibooks.com">
-                <svg class="logo" viewBox="0 0 119 49" width="119" height="49">
-                    <path d="M22.9 17.1c0 2.3-.4 3.9-1.3 4.9-.9 1.1-2.5 1.6-4.8 1.6h-4.3V10.4h4.3c2.3 0 3.8.5 4.8 1.5.9 1.1 1.3 2.7 1.3 5.2m12.6 0c0-6.3-1.5-10.8-4.3-13.3C28.3 1.3 23.5 0 17 0H1.8C.6 0 .2.4.2 1.6v44.9c0 1.1.4 1.6 1.6 1.6H11c1.1 0 1.6-.4 1.6-1.6V33.3H16l.2.3 6.2 12.8c.5 1 1.3 1.5 2.6 1.5h9.4c.8 0 .9-.3 1-.4.1-.3.1-.8-.2-1.3L27.7 32l-.3-.5.5-.2.3-.1c4.8-2.4 7.3-7.1 7.3-14.1m19.7 29.3V1.6c0-1.1-.4-1.6-1.6-1.6h-9.3c-1.1 0-1.6.4-1.6 1.6v44.9c0 1.1.4 1.6 1.6 1.6h9.3c1.2-.1 1.6-.5 1.6-1.7M86.4 24c0 5.1-.6 8.5-1.7 10.3-1.2 1.9-3.4 2.9-6.4 2.9h-2.6V10.7h2.5c3 0 5.2 1 6.4 2.9 1.2 1.9 1.8 5.3 1.8 10.4m7.8 18.6C97.4 39 99 32.8 99 24S97.4 9 94.1 5.4C90.9 1.8 85.7 0 78.5 0H64.8c-1.1 0-1.6.4-1.6 1.6v44.9c0 1.1.4 1.6 1.6 1.6h13.8c7.2-.1 12.4-1.9 15.6-5.5m24.6 3.8V1.6c0-1.1-.4-1.6-1.6-1.6h-9.3c-1.1 0-1.6.4-1.6 1.6v44.9c0 1.1.4 1.6 1.6 1.6h9.3c1.2-.1 1.6-.5 1.6-1.7"></path>
+                <svg class="logo" viewBox="0 0 43 16" width="43" height="16">
+                    <path d="M13.4637 5.53183V5.49035C13.4637 2.29924 11.2148 0.317017 7.59407 0.317017H0V15.6918H3.84V10.957H6.48593L9.6563 15.6889H14.1689L10.4474 10.2518C12.3941 9.3985 13.4637 7.73628 13.4637 5.53183ZM9.58222 5.70072C9.58222 6.82665 8.75852 7.79257 7.38074 7.79257H3.84V3.54665H7.31852C8.35259 3.54665 9.58222 4.15405 9.58222 5.65924V5.70072V5.70072Z"></path>
+                    <path d="M20.0119 0.317017H16.1719V15.6918H20.0119V0.317017Z"></path>
+                    <path d="M29.8874 0.317017H22.8207V15.6918H29.8874C34.6104 15.6918 37.0074 12.4592 37.0074 8.00591V7.96442C37.0074 3.53183 34.6104 0.317017 29.8874 0.317017ZM33.0222 8.04442C33.0222 10.5096 31.9407 12.3437 29.4489 12.3437H26.6607V3.6622H29.4489C31.9407 3.6622 33.0222 5.51109 33.0222 8.00294V8.04442Z"></path>
+                    <path d="M42.9511 0.317017H39.1111V15.6918H42.9511V0.317017Z"></path>
                 </svg>
             </a>
         </header>
